remove redundant errors.Is and rename bonuses endpoint
